--- a/html/lab3.html
+++ b/html/lab3.html
@@ -1,9 +1,37 @@
 <!DOCTYPE html>
 <html>
 	<head>
-
+		<title>FAQ Example</title>
+		<link rel="stylesheet" href="styles/style.css">
+		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+		<script src="js/lab3.js"></script>
 	</head>
 	<body>
-	
+		<section id="faqs">
+			<h1>jQuery FAQ's</h1>
+			
+			<h2>What is jQuery?</h2>
+			<div>
+				<p>jQuery is a library of the Javascript functions that you're most likely to need as you develop web apps.
+				</p>
+			</div>
+			
+			<h2>Why is jQuery so popular?</h2>
+			<div>
+				<p>Three Reasons:</p>
+				<ol>
+					<li>It's free.</li>
+					<li>It lets you get more done in less time</li>
+					<li>All of it's functions are cross-browser compatible</li>
+				</ol>
+			</div>
+			
+			<h2>Which is harder to learn: jQuery or Javascript?</h2>
+			<div>
+				<p>For most functions, jQuery is significantly easier to learn and use than javascript - but remember: jQuery is javascript
+				</p>
+			</div>
+		</section>
 	</body>
 </html>
